added js file with HTML file

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Learning Git</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, vel.</p>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
