--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Learning Git</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, vel.</p>
-
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, dicta.</p>
 
     <script src="script.js"></script>
 </body>
