--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Learning Git</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, vel.</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita sint facere cupiditate, veniam dolor et aliquid nisi dolorum nulla culpa.</p>
-
+    <p>Lorem ipsum dolor sit.</p>
 
     <script src="script.js"></script>
 </body>
